remove Question class